# realm

./: .gitignore  CMakeLists.txt  README.md  _config.yml  index.md
.github/: copy-pr-bot.yaml  release-drafter.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  format.yml  gitlab-remote.yml  legion.yml  nvidia-ci.yml  release-drafter.yml
_data/: navigation.yml
_includes/: footer.html
_includes/head/: custom.html
_pages/: quick-start.md  tutorials.md
_posts/: 2025-03-27-new-home.md
_tutorials/: barrier.md  completion_queue.md  cuda_interop.md  deferred_allocation.md  hello_world.md  index_space_ops.md  machine_model.md  profiling.md  reductions.md  region_instances.md  reservation.md  subgraph.md
benchmarks/: CMakeLists.txt  realm_ubench_common.h
benchmarks/activemsg_ubench/: activemsg_ubench.cc
benchmarks/barrier_ubench/: CMakeLists.txt  barrier_ubench.cc
benchmarks/event_latency/: event_latency.cc
benchmarks/event_throughput/: event_throughput.cc
benchmarks/event_ubench/: event_ubench.cc
benchmarks/lock_chains/: lock_chains.cc
benchmarks/lock_contention/: lock_contention.cc
benchmarks/memcpy/: memcpy.cc
benchmarks/reducetest/: reducetest.cc
benchmarks/reservation_ubench/: CMakeLists.txt  reservation_ubench.cc
benchmarks/subgraph_ubench/: CMakeLists.txt  subgraph_ubench.cc
benchmarks/task_throughput/: task_throughput.h
benchmarks/task_ubench/: task_ubench.cc
benchmarks/unit_benchmarks/: remote_channel_bench.cc
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/src/realm/: __init__.py  realm.cpp
bindings/python/tests/: test_realm.py
cmake/: RealmConfig.cmake.in  RealmPackaging.cmake  deppart_tmpl.cu.in  realm.pc.in  realm_defines.h.in
cmake/toolchains/: aarch64-linux-gnu.cmake  powerpc64le-linux-gnu.cmake
doc/: doc-versions  dropdown.css  index.html  selectversion.js
doc/main/: README_8md.html  activemsg_8h.html  activemsg_8h.js  activemsg_8h__dep__incl.dot  activemsg_8h__dep__incl.map  activemsg_8h__dep__incl.md5  activemsg_8h__incl.dot  activemsg_8h__incl.map  activemsg_8h__incl.md5  activemsg_8h_source.html  address__list_8h.html  address__list_8h.js  address__list_8h__dep__incl.dot  address__list_8h__dep__incl.map  address__list_8h__dep__incl.md5  address__list_8h__incl.dot  address__list_8h__incl.map  address__list_8h__incl.md5  address__list_8h_source.html  addrsplit__channel_8h.html  addrsplit__channel_8h.js  addrsplit__channel_8h__incl.dot  addrsplit__channel_8h__incl.map  addrsplit__channel_8h__incl.md5  addrsplit__channel_8h_source.html  am__mpi_8h.html  am__mpi_8h.js  am__mpi_8h__incl.dot  am__mpi_8h__incl.map  am__mpi_8h__incl.md5  am__mpi_8h_source.html  annotated.html  annotated_dup.js  assert_8h.html  assert_8h.js  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  (+7984 more)
doc/v26.7.1/: activemsg_8h.js  activemsg_8h__incl.map  address__list_8h.html  address__list_8h.js  address__list_8h__dep__incl.map  addrsplit__channel_8h.html  addrsplit__channel_8h__incl.map  am__mpi_8h.html  am__mpi_8h__incl.md5  annotated_dup.js  atomics_8h.js  atomics_8h__dep__incl.map  barrier__impl_8h.html  barrier__impl_8h.js  bgwork_8h.html  bgwork_8h.js  bgwork_8h_source.html  bootstrap_8h.html  bootstrap__internal_8h.js  bootstrap__loader_8h.js  bootstrap__util_8h.js  byfield_8h.html  byfield_8h.js  byfield_8h__incl.md5  bytearray_8h.html  bytearray_8h.js  channel_8h.html  channel_8h__incl.map  channel__common_8h.js  channel__common_8h_source.html  channel__disk_8h.html  channel__disk_8h.js  classActiveMsgProfilingHelper.html  classContiguousPayload.html  classIntancePieceList.html  classPRealm_1_1AffineAccessor-members.html  classPRealm_1_1AffineAccessor.html  classPRealm_1_1AffineAccessor__coll__graph.map  classPRealm_1_1Barrier.js  classPRealm_1_1CompletionQueue.html  (+1286 more)
docs/: index.html
docs/main/: activemsg_8h__dep__incl.md5  activemsg_8h__incl.map  activemsg_8h_source.html  address__list_8h__incl.md5  address__list_8h_source.html  atomics_8h.html  atomics_8h__dep__incl.map  atomics_8h__incl.map  barrier__impl_8h__incl.md5  bgwork_8h.html  bgwork_8h__dep__incl.map  bgwork_8h__incl.map  bootstrap_8h.html  bootstrap_8h_source.html  bootstrap__internal_8h__dep__incl.md5  bootstrap__internal_8h__incl.md5  bootstrap__internal_8h_source.html  bootstrap__loader_8h__incl.md5  bootstrap__loader_8h_source.html  bootstrap__util_8h.html  bootstrap__util_8h__incl.map  byfield_8h__incl.md5  bytearray_8h.html  caching__allocator_8h.html  caching__allocator_8h__incl.map  channel_8h.html  channel_8h__incl.md5  channel__disk_8h.html  channel__disk_8h__incl.map  channel__disk_8h__incl.md5  circ__queue_8h.html  circ__queue_8h__dep__incl.map  (+1151 more)
doxygen/: selectversion.js.in
examples/: CMakeLists.txt
examples/vtable/: CMakeLists.txt  realm_bootstrap.cc  realm_bootstrap.h  vtable.cc
examples/vtable/pmix/: realm_bootstrap.cc
examples/vtable_pmix/: CMakeLists.txt  realm_bootstrap.cc
realm/: CMakeLists.txt  module.cc  network.cc  network.h  network.inl
runtime/: CMakeLists.txt
src/: CMakeLists.txt  realm.hpp
tests/: CMakeLists.txt  alltoall.cc  barrier_reduce.cc  benchmark.cc  bgwork_profile.cc  compqueue.cc  coverings.cc  ctxswitch.cc  cuda_memcpy_test.cc  cuda_reduce_basic.cc  cuda_reduce_basic.h  cuda_reduce_basic_gpu.cu  cuda_scatter_test.cc  deppart.cc  elastic.sh  elastic_test.cc  event_subscribe.cc  extres_alias.cc  gpu_deppart_1d.cc  hip_reduce_basic.cc  hip_reduce_basic.h  hip_reduce_basic.hip  inst_chain_redistrict.cc  inst_reuse.cc  kvcache.cc  large_tls.cc  machine_config.cc  memmodel.cc  memspeed.cc  multiaffine.cc  multiaffine.h  multiaffine_gpu.cu  multifield_transfer.cc  proc_group.cc  realm_reinit.cc  refcount_byfield_test.cc  refcount_image_test.cc  refcount_preimage_test.cc  refcount_setops_test.cc  reservations.cc  (+26 more)
(+751 files in other folders)
